# flow-trading-service

./: .dockerignore  .env.example  .gitignore  .sqruff  CONCEPTS.md  Cargo.toml  Dockerfile  Makefile  README.md  fly.toml
ftauction/: CHANGELOG.md  Cargo.toml  README.md
ftauction/src/: commands.rs  io.rs  lib.rs  main.rs
ftauction/src/commands/: export.rs  solve.rs
ftdemo/: CHANGELOG.md  Cargo.toml  README.md  config.toml
ftdemo/src/: cli.rs  config.rs  impls.rs  lib.rs  main.rs  schedule.rs
fts-axum/: CHANGELOG.md  Cargo.toml  README.md  build.rs
fts-axum/src/: batch_routes.rs  config.rs  demand_routes.rs  lib.rs  openapi.rs  portfolio_routes.rs  product_routes.rs
fts-axum/src/portfolio_routes/: crud.rs  history.rs  list.rs  outcomes.rs
fts-axum/src/product_routes/: crud.rs  outcomes.rs
fts-axum/tests/: api.rs
fts-axum/tests/api/: auction_session.hurl  demand_permissions.hurl  demand_session.hurl  health.hurl  openapi.hurl  portfolio_permissions.hurl  portfolio_session.hurl  product_permissions.hurl
fts-axum/tests/app/: application.rs  mod.rs  permissions.rs
fts-core/: CHANGELOG.md  Cargo.toml  README.md
fts-core/src/: lib.rs  models.rs  ports.rs
fts-core/src/models/: auction.rs  auth.rs  batch.rs  bound.rs  config.rs  cost.rs  curve.rs  datetime.rs  demand.rs  group.rs  map.rs  outcome.rs  portfolio.rs  product.rs  settlement.rs  submission.rs
fts-core/src/ports/: auction.rs  auth.rs  batch.rs  cost.rs  demand.rs  portfolio.rs  product.rs  settlement.rs  solver.rs  submission.rs
fts-demo/: CHANGELOG.md  Cargo.toml  README.md
fts-demo/sql/: V001__products.sql
fts-demo/src/: config.rs  datetime.rs  db.rs  impls.rs  lib.rs  main.rs
fts-demo/src/impl/: auth.rs  submission.rs
fts-demo/src/impls/: auth.rs  (+4 more)
fts-server/: API_REFERENCE.md  CHANGELOG.md  Cargo.toml  README.md
fts-server/src/: lib.rs  openapi.rs  routes.rs  utils.rs
fts-server/tests/: backends.rs  crud.rs  roundtrip.rs
fts-solver/: CHANGELOG.md  Cargo.toml  README.md  build.rs
fts-solver/src/: cli.rs  export.rs  impls.rs  io.rs  lib.rs  types.rs
fts-solver/tests/: all_solvers.rs  samples.rs  simple_solve.rs
fts-sqlite/: .sqruff  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  build.rs
fts-sqlite/.sqlx/: query-0378a54a81558b04d40b7efa5522fe7356f21cd3b13fb46d98dd7f59b8a6ca23.json  query-065d3692089709826aa96d6fb950ff428dec683425db541699e117bbc9dc3b75.json  query-0b96a732bc61d074c2f410319b0def01535e58f759c19a9b0cce1dedfa06b5a7.json  query-0dd61469568821b6ffc204ae3649d26db372a310b3bfa5d582e5f50c1d33a0e6.json  query-0e2e0ae915c616b2e2e5a3d3d55372bb01941a457ce36741c5a2ed51a50ee89b.json  query-10e4d8b92e75d1d5f480452ee25ac1e707ac86ea34c45947a87edcd5587d7660.json  query-11d536ac686bd8e1b90949cda981ebd28451df0fa43458147251efa5b2e69ad2.json  query-142301307a244303f9d3c4e1cebbc4620ae66095b976671271829e39f95f197b.json  query-19df405c65cd0eac04d34f13a1ba91902379294f9468324061ced89a47568c5d.json  query-1c2c38468b61e7cadb82dbce00deff42fb8a39c3085a23ee81b9e63bc469e16d.json  query-1d95ed0129422b29f670b90d7f642fd5c14c41e9b3783d2c447bd77f5aae36b2.json  query-1f6f6c8b1e14f494c6f4a87bdfef70848cb4ed43abaade7e42c7b951727382b1.json  query-242999954b6d4fc6b971daf282a667c8b85954ee2a57b8ea219098e08df6b515.json  query-248fad9f180f05b60623afbeb6da1441010c1d8530fbba32d82cfcaafb681140.json  query-277ee6f05ff34e5ab6caff80f46fa8d279e4b7a31f8d93d664879f3b921cdf87.json  query-295d8684cfe07d17e3895b2d92499160d2355460f19ed648d1f1bf2470a0bb32.json  query-2a1879d0dd5022d61093ba48bb733beb704f30da5962a378dde6cd7d435cf2ae.json  query-30047572445125a68e619fd4caa5a20f45a88a5912b8e6d3d64bbd8a1801073f.json  query-3102343eff8b29c80a443d0e9308932b3280ca633b924c009d9f4dc977836784.json  query-32aeae351ee931d1a8655b27875a577cf8fc46bbcc18de41e5abc6d79add5123.json  query-370a80aa4e7d1b5f729d871424f4f366bd90990ea98e8f23800cc38cdace6ccb.json  query-3c42fa3fdc05bfc9e78bbae4eb88a47451454c1a17c044b83cc3b911a7c2ae79.json  query-3cf940229941bd1aadf04b9d2daa2c4faffa023e2cba47865d581ab84cbf67e5.json  query-3ea8c1898576e31577c2ed9856c519fe5c7fa367c26149fc8ef026aa02d2bcaf.json  query-42fb8c2823a430834f3cb420ac8ad55b095fb61738e5305597694a6be23c5dcc.json  query-43dcb734932ec278c3137e3714313d8593764435ea6a67eebf81d3e32dd18ab3.json  query-4536d217cfb637224ef38db93c4bdc07bb4df06e74cecd69fba62e54a0e4fd78.json  query-4bca1ec8d02137f5aaa9005898fef27dd5199854aa872cefefdb64a7cdc812f6.json  query-4d601056f15220744ae7a39862dd63593eff00235b7f46312e5a080d2188ce73.json  query-4e7c448747c284de0e5c5a62c1f4862599d62b762a3948b0d2487024a1c8912c.json  query-4f69c3a469b1a410066b8e9689a651c89a66d014768f3939c7f71e0db6ee7cfa.json  query-513fad35c92c569e31b65f6b133191f7c06e70574ead02c3f040760e5ff92076.json  query-576fb17e209d6b5c947e85432eb26b5fe6e1cd77ed3cbd9a97ac5c6c9895d44f.json  query-5bbab9ebe81d9adc2891a3e4b4860f32cd7abb0f78753ca838e0d3d966f81ae0.json  query-5eea60bdb6a8f607495c1081577e6c111c3cd223a62b8fb48617995e5debe185.json  query-5ef0c6df6148d230e3dc036146682171efb55aadf43c03d6ebc11b083d53795f.json  query-5fce763f273145a02faa246718fdb06bf45d42caed5df464ded5f37c9405f4fb.json  query-65bef1ad612838c431f062fd250eb6dc3143f15d1b399d509d83957bd79914e9.json  query-65fd4b73b6959e80ab3f613c5eccf9b69aaa87c0bab5d129d4235f4bbcfc71b5.json  query-6b37735fd6ebdb0a3890e8587eaffbea0dea606174256d6b609fac87f4c6ba66.json  (+43 more)
fts-sqlite/migrations/: 001__products.sql  002__orderbook.sql  003__orderbook_lifetimes.sql
fts-sqlite/queries/: active_demands.sql  active_portfolios.sql  gather_batch.sql  get_demand_by_id.sql  get_portfolio_by_id.sql  get_portfolio_by_id_expanded.sql  get_product_by_id.sql
fts-sqlite/schema/: 001_product.sql  002_demand.sql  003_portfolio.sql  004_basis_view.sql  004_portfolio_view.sql  005_batch.sql  006_trade_view.sql  007_settlement.sql
fts-sqlite/sql/: V002__orderbook.sql  V003__orderbook_lifetimes.sql
fts-sqlite/src/: config.rs  datetime.rs  db.rs  impl.rs  lib.rs  types.rs
fts-sqlite/tests/: common.rs  portfolio_history.rs  product_expansion.rs  trigger_tests.rs
ftsolve/: CHANGELOG.md  Cargo.toml  README.md
ftsolve/src/: main.rs
(+73 files in other folders)
