[workspace]
members = ["fts-core", "fts-sqlite", "fts-server", "fts-solver", "ftauction", "ftdemo"]
resolver = "2"

[workspace.package]
authors = ["Jason Dark <jason.dark@forwardmarketdesign.com>", "Fabio Isler <fabio.isler@forwardmarketdesign.com>"]
edition = "2024"
license = "MIT"
publish = true
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
clap = "4.5"
humantime = "2.2"
indexmap = "2.9"
rstest = { version = "0.25", default-features = false }
rstest_reuse = "0.7"
rustc-hash = "2.1"
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"
time = "0.3"
tokio = "1.44"
tracing = "0.1"
utoipa = "5.3"
uuid = "1.16"
