[workspace]
resolver = "2"
members = [
    "fts-core",
    "fts-solver",
    "fts-sqlite",
    "fts-axum",
    "ftauction",
    "ftdemo",
]

[workspace.package]
authors = ["Jason Dark <jason.dark@forwardmarketdesign.com>", "Fabio Isler <fabio.isler@forwardmarketdesign.com>"]
edition = "2024"
license = "MIT"
publish = true
rust-version = "1.88"

[workspace.dependencies]
fts-axum = { path = "./fts-axum", version = "0.4.1" }
fts-core = { path = "./fts-core", version = "0.4.0" }
fts-solver = { path = "./fts-solver", version = "0.5.1" }
fts-sqlite = { path = "./fts-sqlite", version = "0.2.1" }

aide = "0.15"
anyhow = "1.0"
clap = "4.5"
headers = "0.4"
indexmap = "2.11"
rstest = { version = "0.25", default-features = false }
rstest_reuse = "0.7"
rustc-hash = "2.1"
schemars = "0.9"
serde = "1.0"
serde_json = "1.0"
sqlx = "0.8"
thiserror = "2.0"
time = "0.3"
tokio = "1.46"
tracing = "0.1"
uuid = "1.18"
