[package]
name = "ftauction"
description = "Tools for analyzing flow trading auctions" 
version = "0.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
fts-solver = { path = "../fts-solver", version = "0.3.2", features = ["clarabel", "osqp", "io"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
