[package]
name = "ftauction"
description = "Tools for analyzing flow trading auctions" 
version = "0.2.2"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
fts-solver = { workspace = true, features = ["clarabel", "osqp", "io"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
