[package]
name = "ftdemo"
description = "A demonstrative implementation of a flow trading server"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
fts-core = { path = "../fts-core", version = "0.2.0" }
fts-server = { path = "../fts-server", version = "0.2.3" }
fts-sqlite = { path = "../fts-sqlite", version = "0.1.5" }

# For parsing CLI args
clap = { workspace = true, features = ["derive", "env"] }
dotenvy = { version = "0.15" }
humantime = { workspace = true }
time = { workspace = true, features = ["formatting", "parsing"] }

# For running the server
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

# For reporting the traces
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
testmode = []
