[package]
name = "ftdemo"
description = "A demonstration API server for flow trading"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
fts-core = { workspace = true }
fts-axum = { workspace = true }
fts-solver = { workspace = true, features = ["clarabel", "serde", "schemars"] }
fts-sqlite = { workspace = true, features = ["schemars"] }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env", "string"] }
headers = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid = { workspace = true, features = ["v4", "v8"] }
schemars = { workspace = true, features = ["uuid1"] }
time = { workspace = true, features = ["formatting", "parsing"] }
tracing = { workspace = true }

config = { version = "0.15", features = ["toml"] }
humantime-serde = { version = "1.1" }
jwt-simple = { version = "0.12", default-features=false, features=["pure-rust"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4.4"
