[package]
name = "fts-axum"
description = "A REST API server for flow trading implemented with Axum"
version = "0.4.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
fts-core = { workspace = true, features = ["schemars", "serde"] }

aide = { workspace = true, features = ["axum", "axum-extra-headers", "axum-json", "axum-query"] }
schemars = { workspace = true, features = ["derive", "preserve_order"] }
serde = { workspace = true, features = ["derive", "rc"] }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }

axum = { version = "0.8" }
axum-extra = { version = "0.10", features = ["typed-header"] }
headers = { version = "0.4" }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
fts-core = { workspace = true, features = ["schemars", "serde"] }
fts-solver = { workspace = true, features = ["schemars", "serde"] }
fts-sqlite = { workspace = true, features = ["schemars"] }

rstest = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid = { workspace = true, features = ["v4"] }

axum-test = "17.3"
hurl = "6.1"
hurl_core = "7.0"
form_urlencoded = "1.2"
serde_html_form = "0.2"
test-log = { version = "0.2", features = ["trace"] }
