[package]
name = "fts-core"
description = "A collection of ports and models for use in flow trading implementations"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version = "0.1.1"

[dependencies]
# This pulls in the Solver trait. TODO: invert this dependency?
fts-solver = { path = "../fts-solver", version = "0.1.1" }

fxhash = { workspace = true }
humantime = { workspace = true }
indexmap = { workspace = true, features = ["serde", "std"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["formatting", "parsing", "serde"] }
utoipa = { workspace = true, features = ["time", "uuid"] }
uuid = { workspace = true, features = ["serde"] }
