[package]
name = "fts-core"
description = "A collection of ports and models for use in flow trading implementations"
version = "0.4.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
indexmap = { version = "2.9" }
rustc-hash = { version = "2.1" }
thiserror = { workspace = true }
schemars = { workspace = true, features = ["derive", "indexmap2", "preserve_order"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde-untagged = { version = "0.1", optional = true }

[dev-dependencies]
fts-core = { path = ".", features = ["serde"] }
serde_json = { workspace = true }

[features]
schemars = ["dep:schemars", "serde"]
serde = ["dep:serde", "dep:serde-untagged", "indexmap/serde"]
