[package]
name = "fts-demo"
description = "A simple, reference backend for `fts` implemented with SQLite"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version = "0.1.3"

[dependencies]
fts-core = { path = "../fts-core", version = "0.1.3" }
fts-server = { path = "../fts-server", version = "0.2.0" }
fts-solver = { path = "../fts-solver", version = "0.2.0", features = ["clarabel", "serde"] }

clap = { workspace = true, features = ["derive", "env"] }
fxhash = { workspace = true }
humantime = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["serde", "formatting", "parsing"] }
uuid = { workspace = true, features = ["serde", "v4"] }

dotenvy = { version = "0.15" }
r2d2 = { version = "0.8" }
r2d2_sqlite = { version = "0.26" }
refinery = { version = "0.8", features = ["rusqlite"] }
rusqlite = { version = "0.33", features = ["bundled", "serde_json", "time", "uuid"] }

# For running the server
tokio = { workspace = true, features = ["full"] }

# For reporting the traces
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
testmode = []
