[package]
name = "fts-solver"
description = "A reference solver for flow trading optimization"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version = "0.2.0"

[[bin]]
name = "solver"
path = "src/bin/solver.rs"
required-features = ["cli"]

[dependencies]
# black-box solvers we can pull in
clarabel = { version = "0.10", optional = true }
osqp = { version = "1.0", optional = true }

# provide the option for (de)serialization of the raw solver types
serde = { workspace = true, features = ["derive"], optional = true }

# used for building the optional CLI interface
serde_json = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive"], optional = true }

# core crates used by the library
rustc-hash = "2.1"
anyhow = "1.0"

indexmap = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = "0.5"
rstest = { workspace = true }
rstest_reuse = { workspace = true }

# enable all the features for testing purposes
fts-solver = { path = ".", features = ["cli"] }

[features]
default = ["clarabel"]
clarabel = ["dep:clarabel"]
osqp = ["dep:osqp"]
serde = ["dep:serde", "indexmap/serde"]
cli = ["dep:clap", "dep:serde_json", "serde", "clarabel", "osqp"]
