[package]
name = "fts-solver"
description = "A reference solver for flow trading optimization"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version = "0.2.0"

[dependencies]
# black-box solvers we can pull in
clarabel = { version = "0.10", optional = true }
osqp = { version = "1.0", optional = true }

# provide the option for (de)serialization of the raw solver types
serde = { workspace = true, features = ["derive"], optional = true }

# core crates used by the library
indexmap = { workspace = true, features = ["std"] }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = "0.5"
rstest = { workspace = true }
rstest_reuse = { workspace = true }
serde_json = { workspace = true }

# enable all the features for testing purposes
fts-solver = { path = ".", features = ["clarabel", "osqp", "io"] }

[features]
default = ["clarabel"]
clarabel = ["dep:clarabel"]
osqp = ["dep:osqp"]
serde = ["dep:serde", "indexmap/serde"]
io = ["serde"]
