[package]
name = "fts-sqlite"
description = "A simple, reference backend for `fts` implemented with SQLite"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version = "0.1.6"

[dependencies]
fts-core = { path = "../fts-core", version = "0.2.0" }
fts-server = { path = "../fts-server", version = "0.3.0" }
fts-solver = { path = "../fts-solver", version = "0.4.0", features = ["clarabel", "serde"] }

humantime = { workspace = true }
indexmap = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["serde", "formatting", "parsing"] }
uuid = { workspace = true, features = ["serde", "v4"] }

sqlx = { version = "0.8.5", features = ["runtime-tokio", "sqlite", "tls-rustls", "macros", "time", "migrate", "rust_decimal", "uuid", "derive"] }
