[package]
name = "fts-sqlite"
description = "A simple, reference backend for `fts` implemented with SQLite"
version = "0.1.6"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
fts-core = { workspace = true, features = ["serde"] }

sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "json",  "macros", "migrate", "derive", "time", "uuid"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
time = { workspace = true, features = ["serde", "formatting", "parsing"] }
uuid = { workspace = true, features = ["serde"] }

schemars = { workspace = true, features = ["derive", "uuid1"], optional = true }

[features]
schemars = ["dep:schemars"]

[dev-dependencies]
anyhow = { workspace = true }
fts-solver = { workspace = true, features = ["serde", "clarabel"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
uuid = { workspace = true, features = ["v4"] }