[package]
name = "ftsolve"
description = "Solve a flow trading problem" 
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
fts-solver = { path = "../fts-solver", features = ["clarabel", "osqp", "io"] }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
